@@ -1,3 +1,12 @@
+2004-02-25  Andy Wingo  <wingo@pobox.com>
+
+	* gst/interleave/interleave.c (interleave_buffered_loop): Always
+	push only when channel->buffer is NULL. Prevents segfaults doing
+	the state change after a nonlocal exit, like a scheme exception.
+
+	* gst/audioconvert/gstaudioconvert.c (gst_audio_convert_getcaps):
+	Handle the case where the intersected caps is empty.
+
 2004-02-25  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* gst/law/mulaw-decode.c: (mulawdec_link):
